# basic-data-pipeline

./: .dockerignore  .gitignore  Procfile  README.md  cassandra_schema.cql  docker-compose.yml  flink.Dockerfile  pyproject.toml
.github/workflows/: ci.yml
docs/: flink.md  grpc.md  troubleshooting.md  zookeeper.md
src/pipeline/: __init__.py  api.py  config.py  flink_job_submitter.py  flink_pageview_stats.py  flink_smoke_test.py  flink_stats_consumer.py  grpc_event_insights_client.py  grpc_event_insights_server.py  kafka_consumer.py  producer.py  rabbitmq_worker.py  realtime_events.py  realtime_page.py  zookeeper.py  zookeeper_coordinator.py  zookeeper_status.py
src/pipeline/protos/: __init__.py  event_insights.proto  event_insights_pb2.py  event_insights_pb2_grpc.py
tests/: test_api.py  test_config.py  test_flink_job_submitter.py  test_flink_smoke_test.py  test_flink_stats_consumer.py  test_grpc_event_insights.py  test_kafka_consumer.py  test_producer.py  test_rabbitmq_worker.py  test_realtime_events.py  test_zookeeper.py
