[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pipeline"

[tool.uv.extra-build-dependencies]
apache-beam = ["setuptools<75"]

[project]
name = "basic-data-pipeline"
version = "0.1.0"
description = "Simple basic pipeline to experiment with Kafka, RabbitMQ, Redis, and Cassandra"
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
  "kafka-python-ng",   # For Kafka (maintained fork of kafka-python)
  "pika",              # For RabbitMQ
  "redis",             # For Redis
  "kazoo",             # For ZooKeeper coordination demo
  "cassandra-driver",  # For Cassandra
  "fastapi",           # For endpoint API
  "uvicorn[standard]", # Web server for FastAPI
  "websockets",        # For smoke-test WebSocket clients
  "faker",             # Random data generation
  "apache-flink==2.3.0", # Apache Flink Python API
]

[project.optional-dependencies]
dev = [
  "pytest",  # For testing
  "httpx",   # For FastAPI test client
  "ruff",   # For formatting and linting
  "honcho", # For dev procfile orchestration
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
producer = "pipeline.producer:main"
consumer = "pipeline.kafka_consumer:main"
worker = "pipeline.rabbitmq_worker:main"
api = "pipeline.api:main"
coordinator = "pipeline.zookeeper_coordinator:main"
flink-pageview-stats = "pipeline.flink_pageview_stats:main"
flink-job-submitter = "pipeline.flink_job_submitter:main"
flink-stats-consumer = "pipeline.flink_stats_consumer:main"
flink-smoke-test = "pipeline.flink_smoke_test:main"
